Introducir páginas web principales para inicio, tratamiento de agua, acuicultura, nosotros y soporte tecnico, junto con un nuevo componente de pie de página de contacto.

--- a/src/pages/acuicult.astro
+++ b/src/pages/acuicult.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/style.css";
+import ContacFooter from "../components/ContacFooter.astro";
 ---
 
 <!doctype html>
@@ -122,45 +123,9 @@ import "../styles/style.css";
       </div>
     </section>
 
-    <!-- Footer Section -->
-    <footer>
-      <div class="footer-bg-overlay"></div>
-      <div class="footer-container">
-        <div class="footer-content">
-          <div class="footer-contact">
-            <h3>Contacto</h3>
-            <div class="contact-item">
-              <i class="fa-solid fa-location-dot"></i>
-              <div>
-                <p>Carrera 43F 14 - 45, El Poblado</p>
-                <p>Medellín - Colombia</p>
-              </div>
-            </div>
-            <div class="contact-item">
-              <i class="fa-solid fa-envelope"></i>
-              <p>ventas@grupoaqua.com</p>
-            </div>
-            <div class="contact-item">
-              <i class="fa-solid fa-phone"></i>
-              <p>Teléfono: (604) 448 8224</p>
-            </div>
-            <div class="contact-item">
-              <i class="fa-brands fa-whatsapp"></i>
-              <p>Whatsapp: 316 525 0933</p>
-            </div>
-          </div>
-          <div class="footer-logo-section">
-            <div class="footer-logo">
-              <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p>
-            Copyright © 2024 Grupoaqua S.A.S | Todos los derechos reservados
-          </p>
-        </div>
-      </div>
-    </footer>
+    <!-- Footer -->
+    <ContacFooter />
+
+   
   </body>
 </html>
